--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = storage
+    remote = myremote
 ['remote "storage"']
     url = ssh://dvc@rinconseguro.com:33/share/DVC
+['remote "myremote"']
+    url = /tmp/dvc-storage
