--- a/.dvc/config
+++ b/.dvc/config
@@ -1,5 +1,5 @@
 [core]
-    remote = myremote
+    remote = storage
 ['remote "storage"']
     url = ssh://dvc@rinconseguro.com:33/share/DVC
 ['remote "myremote"']
